[package]
name = "vercel-cache-helper"
version = "0.1.0"
edition = "2021"
description = "Hello world"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
reqwest = { version = "0.11.20", features = ["json"] }
tokio = { version = "1.32.0", features = ["full"] }
atty = "0.2"
