[package]
name = "vercel-cache-helper"
version = "0.2.3"
edition = "2021"
description = "Hello world"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
reqwest = { version = "0.11.20", features = ["json", "stream"] }
tokio = { version = "1.32.0", features = ["full"] }
atty = "0.2"
indicatif = "0.17.7"
dirs = "5.0.1"
sha2 = "0.10.8"
tar = "0.4.40"
zstd = "0.12"
tempfile = "3.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-util = { version = "0.7.9", features = ["codec"]}
